--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@
 		padding:30px 20px;
 		line-height:25px;
 		box-shadow:0px 3px 10px rgb(0 0 0 / 10%);
-		height:250px;
    }
     .choose-items p{
 	   font-size:15px;
@@ -854,6 +853,7 @@ padding:0 50px 50px 50px;
   .first{
    padding:20px;
    margin-top:20px;
+    margin-bottom: 20px;
    background-color:#fff;
    font-size:16px;
     font-family: "poppins", sans-serif;
@@ -919,7 +919,7 @@ padding:0 50px 50px 50px;
 	    
    .form-content{
       margin-top:20px;
-	  padding-bottom:20px;
+	   padding: 20px;
 	  background-color:#fff;
 	  box-shadow:0 0 30px #ccc;
 	  width:100%;  
