--- a/responsive.css
+++ b/responsive.css
@@ -174,4 +174,85 @@ width:91.66%;
 flex:0 0 auto;
 width:100%;
 }
+.d-lg-none{
+	display:none;
+}
+.plat2{
+display:block !important; 
+}
+}
+@media (max-width:992px){
+.col-md-1{
+flex:0 0 auto;
+width:8.33%;
+}
+.col-md-2{
+flex:0 0 auto;
+width:16.66%;
+}
+.col-md-3{
+flex:0 0 auto;
+width:25%;
+}
+.col-md-4{
+flex:0 0 auto;
+width:33.33%;
+}
+.col-md-5{
+flex:0 0 auto;
+width:41.66%;
+}
+.col-md-6{
+flex:0 0 auto;
+width:50%;
+}
+.col-md-7{
+flex:0 0 auto;
+width:58.33%;
+}
+.col-md-8{
+flex:0 0 auto;
+width:66.66%;
+}
+.col-md-9{
+flex:0 0 auto;
+width:75%;
+}
+.col-md-10{
+flex:0 0 auto;
+width:83.33%;
+}
+.col-md-11{
+flex:0 0 auto;
+width:91.66%;
+}
+.col-md-12{
+flex:0 0 auto;
+width:100%;
+}
+.plat1{
+	display:none;
+}
+.choose-items {
+	margin-bottom:30px;
+}
+.play-button{
+	margin-top:0;
+}
+.abt-img{
+	display:flex;
+	height:400px;
+}
+.d-md-none{
+	display:none;
+}
+.buy-order h3 {
+    left:198px;
+}
+.address {
+margin-top:30px;
+}
+.base h2 {
+	margin-top:30px;
+}
 }
