--- a/responsive.css
+++ b/responsive.css
@@ -115,6 +115,54 @@ margin-top:20px;
 @media (min-width:768px){
   .container{
    width:740px;
+}.col-md-1{
+f
+lex:0 0 auto;
+width:8.33%;
+}
+.col-md-2{
+flex:0 0 auto;
+width:16.66%;
+}
+.col-md-3{
+flex:0 0 auto;
+width:25%;
+}
+.col-md-4{
+flex:0 0 auto;
+width:33.33%;
+}
+.col-md-5{
+flex:0 0 auto;
+width:41.66%;
+}
+.col-md-6{
+flex:0 0 auto;
+width:50%;
+}
+.col-md-7{
+flex:0 0 auto;
+width:58.33%;
+}
+.col-md-8{
+flex:0 0 auto;
+width:66.66%;
+}
+.col-md-9{
+flex:0 0 auto;
+width:75%;
+}
+.col-md-10{
+flex:0 0 auto;
+width:83.33%;
+}
+.col-md-11{
+flex:0 0 auto;
+width:91.66%;
+}
+.col-md-12{
+flex:0 0 auto;
+width:100%;
 }
     }
 @media (min-width:992px){
@@ -182,54 +230,7 @@ display:block !important;
 }
 }
 @media (max-width:992px){
-.col-md-1{
-flex:0 0 auto;
-width:8.33%;
-}
-.col-md-2{
-flex:0 0 auto;
-width:16.66%;
-}
-.col-md-3{
-flex:0 0 auto;
-width:25%;
-}
-.col-md-4{
-flex:0 0 auto;
-width:33.33%;
-}
-.col-md-5{
-flex:0 0 auto;
-width:41.66%;
-}
-.col-md-6{
-flex:0 0 auto;
-width:50%;
-}
-.col-md-7{
-flex:0 0 auto;
-width:58.33%;
-}
-.col-md-8{
-flex:0 0 auto;
-width:66.66%;
-}
-.col-md-9{
-flex:0 0 auto;
-width:75%;
-}
-.col-md-10{
-flex:0 0 auto;
-width:83.33%;
-}
-.col-md-11{
-flex:0 0 auto;
-width:91.66%;
-}
-.col-md-12{
-flex:0 0 auto;
-width:100%;
-}
+
 .plat1{
 	display:none;
 }
