--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@
      position:absolute;
      left:0;
 	 top:0;
+	 color: #fff;
      background-color:#00bcd4;
      text-align:center;
      width:50px;
